Change text area to stop using #eee color where it is practically unreadable! Fixes comment area

--- a/style.css
+++ b/style.css
@@ -636,7 +636,7 @@ textarea {
 	-webkit-box-shadow: 0 0 0 #fff;
 	-webkit-box-shadow: 0 0 0 #fff;
 	box-shadow: 0 0 0 #fff;
-	color: #eee;
+	color: #4d4d4e;
 	font-size: 1em;
 	font-weight: 300;
 	letter-spacing: 0.5px;
